--- a/src/com/company/todo.txt
+++ b/src/com/company/todo.txt
@@ -1,2 +1,2 @@
-1. Осмысленные тексты рантайм-эксепшнов (не кастится строка к числу и т.п.)
-2. Придумать расширение для исходников на Liscript #1
+1. РћСЃРјС‹СЃР»РµРЅРЅС‹Рµ С‚РµРєСЃС‚С‹ СЂР°РЅС‚Р°Р№Рј-СЌРєСЃРµРїС€РЅРѕРІ (РЅРµ РєР°СЃС‚РёС‚СЃСЏ СЃС‚СЂРѕРєР° Рє С‡РёСЃР»Сѓ Рё С‚.Рї.)
+2. РџСЂРёРґСѓРјР°С‚СЊ СЂР°СЃС€РёСЂРµРЅРёРµ РґР»СЏ РёСЃС…РѕРґРЅРёРєРѕРІ РЅР° Liscript #1
